Fix invisible file body bg with dark theme

--- a/res/themes/dark/css/_dark.scss
+++ b/res/themes/dark/css/_dark.scss
@@ -217,7 +217,7 @@ $breadcrumb-placeholder-bg-color: #303030;
 $user-tile-hover-bg-color: $header-panel-bg-color;
 
 $message-body-panel-fg-color: $secondary-fg-color;
-$message-body-panel-bg-color: #424242; // "Dark Tile"
+$message-body-panel-bg-color: #212121; // "Dark Tile"
 $message-body-panel-icon-fg-color: $secondary-fg-color;
 $message-body-panel-icon-bg-color: #383838; // "System Dark"
 
